--- a/src/styles/general.css
+++ b/src/styles/general.css
@@ -34,7 +34,7 @@ section {
     display: grid;
     gap: 1.25em;
     margin: 2.5em 0;
-    grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
 }
 
 /* Image */
